# .github

./: README.md
dq.work/_deploy/_doqs/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dq.work/_deploy/_doqs/src/: mkdocs.yml
dq.work/_deploy/_doqs/src/_md/: index.md
dq.work/_deploy/_doqs/src/_md/_assets/: .gitkeep  kroki-examples.md  kroki-nomnoml.md
dq.work/_deploy/_doqs/src/_md/_scrx/: .gitkeep
dq.work/_deploy/_doqs/src/_md/_scrx/.excluded/: coming-soon.md
dq.work/_deploy/_doqs/src/_md/_wip/: overview.md
dq.work/_deploy/_doqs/src/_md/_wip/awesome-feature/: details.md  overview.md
dq.work/_deploy/_doqs/src/_md/cli/: coming-soon.md
dq.work/_deploy/_doqs/src/_md/ui/: index.md
dq.work/_deploy/_notes/.ignored/: __scpSite.md  _advancedReadMe.md  _buildless.md  astro.md  fonts.css  scrx.md
dq.work/_deploy/v1/assets/_content/__externals/: timeline.json
dq.work/_deploy/v1/styles/_namespace/: dq.css
dq.work/_deploy/v2/: caddyfile  index.html
profile/: README.md
