[project]
name = "doqs"
version = "0.1.0"
description = "DownQuark Doqumentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "executing==2.2.1",
    "ghp-import==2.1.0",
    "i2==0.1.48",
    "idna==3.10",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "kroki==0.1.6",
    "markdown==3.8.2",
    "markdown-checklist==0.4.4",
    "markdown-kroki==0.4.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-dracula-theme==1.0.8",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-kroki-plugin==0.9.0",
    "packaging==25.0",
    "parso==0.8.5",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==1.1",
    "requests==2.32.5",
    "result==0.17.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "termynal>=0.13.1",
    "traitlets==5.14.3",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
]
